# CrispMath

./: .gitignore  .release-notes-v0.4.1.md  .release-notes-v0.6.0.md  DISTRIBUTION.md  HANDOFF.md  HANDOFF_NEXT.md  HANDOFF_PRECISION.md  HISTORY.md  OCR_PARSING_HANDOVER.md  PLAN.md  STORE_LISTING.md  bundle_symengine.sh  libcas_wrapper.dylib  pubspec.yaml  readme.md
.github/workflows/: build-android.yml  build-ios.yml  build-linux.yml  build-macos.yml  build-web.yml  build-windows.yml  ci.yml  deploy-pages.yml  release.yml
integration_test/: app_smoke_test.dart  cas_corpus_native_test.dart  cas_native_test.dart  piecewise_udf_native_test.dart  udf_v2_native_test.dart
ios/: Podfile
lib/: diagnostics_runner_io.dart  main.dart
linux/: CMakeLists.txt
macos/: Podfile
native/: CMakeLists.txt
test/: analysis_engine_test.dart  app_state_persistence_test.dart  app_state_test.dart  australia_map_painter_test.dart  auto_solve_test.dart  boolean_chip_test.dart  calculator_button_test.dart  calculator_engine_test.dart  calculator_input_bar_test.dart  cas_corpus_data.dart  cas_corpus_shared.dart  cas_corpus_test.dart  conic_math_test.dart  constants_catalog_test.dart  constraints_dsl_help_popover_test.dart  crash_reporter_test.dart  crisp_assist_integration_test.dart  crisp_assist_live_test.dart  crisp_assist_persistence_test.dart  crisp_assist_service_test.dart  cryptarithm_prefill_test.dart  csp_dsl_globals_test.dart  csp_mus_test.dart  csp_solver_test.dart  csp_trace_test.dart  currency_evaluator_test.dart  date_time_evaluator_test.dart  distributions_test.dart  drawing_canvas_test.dart  dsl_to_flatzinc_test.dart  edge_cases_test.dart  eigen_test.dart  engine_service_test.dart  error_formatter_test.dart  exact_integer_test.dart  export_csv_test.dart  expression_pipeline_deep_test.dart  expression_preprocessing_utils_test.dart  flatzinc_tab_test.dart  function_reference_dialog_test.dart  (+101 more)
tool/: cas_corpus_verify.py  parse_latex.dart  web_smoke.mjs
web/: crispembed_ocr.js  crispembed_ocr.wasm  index.html  manifest.json  privacy.html  symengine.js  symengine_boot.js
windows/: CMakeLists.txt
(+146 files in other folders)
